CDH-15412: PermGen OOM in hbase-indexer unit test on jenkins (tests pass on OSX w/ java7)