@@ -168,6 +168,17 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>-Xmx512m -XX:MaxDirectMemorySize=256m -XX:MaxPermSize=128M</argLine>
+          <environmentVariables>
+            <MALLOC_ARENA_MAX>4</MALLOC_ARENA_MAX>
+          </environmentVariables>
+        </configuration>
+      </plugin>
+      
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
         <version>2.3</version>
         <configuration>
